<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_user"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menu_profile"
            android:text="@string/profile"
            android:padding="16dp"
            android:background="?attr/selectableItemBackground"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/menu_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:padding="16dp"
            android:background="?attr/selectableItemBackground"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/menu_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:padding="16dp"
            android:background="?attr/selectableItemBackground"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/menu_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:padding="16dp"
            android:background="?attr/selectableItemBackground"
            android:textSize="16sp"
            android:textColor="@android:color/holo_red_dark"/>

    </LinearLayout>

</ScrollView>