<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle"
            android:text="@string/trade_buddy"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#1A1A1A"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="40dp"/>
        
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="#000"
            android:textColorHint="#888"
            android:background="@drawable/edittext_bg"
            android:id="@+id/edtEmail"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/edtPass"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#000"
            android:textColorHint="#888"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtForgotPass"
            android:text="@string/forgot_password"
            android:layout_marginTop="6dp"
            android:layout_marginStart="120dp"
            android:textColor="#3366FF"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_bg"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSignup"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="#3366FF"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:paddingBottom="24dp"/>


    </LinearLayout>

</ScrollView>