<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:padding="24dp"
    android:gravity="center">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_your_password"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/edtEmail"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_bg"
        android:layout_margin="5dp"
        android:padding="8dp"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSendReset"
        android:layout_marginTop="16dp"
        android:text="@string/send_reset_email"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"/>

</androidx.appcompat.widget.LinearLayoutCompat>